--- a/style.css
+++ b/style.css
@@ -1,24 +1,46 @@
 body{
     margin: 0;
     width: 100%;
+    font-family: monospace;
+    font-size: 16px;
+    background-color:rgb(39, 22, 122);
+    color: #ffffff;
 }
 
-
+header{
+    text-align: center;
+}
+header p{
+    font-style: italic;
+}
+form{
+    margin-top: 50px;
+    background-color: #1b1b32;
+    padding: 50px 75px;
+}
 input,select,textarea{
-
-    width: 100%;
+    margin: 10px 0 0 0;
+	width: 100%;
+  min-height: 2em;
+    
 }
 
 .container{
-    margin:0 auto;
-    width: 600px;
+    margin:30px auto;
+    width: 80%;
+    min-width: 300px;
+
 }
 
-.label{
+label{
     display: block;
+    margin: 0.5rem 0;
 }
+
 .inline{
-    width: unset;
+  width: unset;
+  margin: 0 0.5em 0 0;
+  vertical-align: middle;
 }
 
 
