--- a/style.css
+++ b/style.css
@@ -3,7 +3,7 @@ body{
     width: 100%;
     font-family: monospace;
     font-size: 16px;
-    background-color:rgb(39, 22, 122);
+    background-color:rgb(90,90,148);
     color: #ffffff;
 }
 
@@ -14,15 +14,45 @@ header p{
     font-style: italic;
 }
 form{
-    margin-top: 50px;
-    background-color: #1b1b32;
+    width: 480px;
+    margin:0 auto;
+    background-color: rgb(27,27,49, 0.8);
+    border-radius: 5px;
     padding: 50px 75px;
 }
+
 input,select,textarea{
-    margin: 10px 0 0 0;
-	width: 100%;
-  min-height: 2em;
+    border:none;
+    min-height: 2em;
+    border-radius: 5px;
+    padding: 5px;
     
+}
+
+textarea{
+    resize: none;
+    min-height: 100px;
+}
+
+input[type='checkbox']{
+    display: block;
+    width: 20px;
+}
+
+.form-group, .choice{
+    padding-bottom: 30px;
+    display: flex;
+    flex-direction: column;
+    gap: 10px;
+}
+
+.choice{
+    gap: 5px;
+}
+
+.choice label{
+    display: flex;
+    align-items: center;
 }
 
 .container{
@@ -32,15 +62,22 @@ input,select,textarea{
 
 }
 
-label{
-    display: block;
-    margin: 0.5rem 0;
-}
-
 .inline{
   width: unset;
   margin: 0 0.5em 0 0;
   vertical-align: middle;
 }
 
+#submit{
+    width: 100%;
+    background-color:#36AF65;
+    border: none;
+    height: 50px;
+    font-size: 1.15rem;
+    color: white;
+    border-radius: 5px;
+}
 
+#comment{
+    color:gray;
+}
